<resources>
    <string name="app_name">Resolver Rocket</string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="phone_numer">Número de teléfono</string>
    <string name="company_id">ID de empresa</string>

    <string name="no_email">Por favor, introduzca una dirección de correo electrónico.</string>
    <string name="no_name">Por favor, introduzca un nombre.</string>
    <string name="no_lastname">Por favor, introduzca sus apellidos.</string>
    <string name="no_password">Por favor, introduzca una contraseña.</string>
    <string name="no_pass_conf">Por favor, confirme su contraseña.</string>
    <string name="passw_must_match">Las contraseñas deben coincidir.</string>
    <string name="no_phone_num">Por favor, introduzca un número de teléfono.</string>
    <string name="no_com_id">Por favor, introduzca un ID de empresa.</string>
    <string name="unvalid_com_id">Por favor, introduzca un ID de empresa válido.</string>
    <string name="user_registered">Usuario registrado exitosamente.</string>
    <string name="unable_to_resgister">No se ha podido registrar al usuario.</string>
    <string name="email_in_use">La dirección de correo electrónico ya está en uso.</string>

    <string name="btn_add_new">+</string>
    <string name="tv_nom_categoria">Nombre de la categoría</string>
    <string name="tvCategorias">Elija una de las siguientes categorías:</string>

    <string name="enter_email">Introduzca un correo electrónico</string>
    <string name="enter_pass">Introduzca la contraseña</string>
    <string name="invalid_email">El formato del correo electrónico no es válido.</string>

    <string name="titulo_ticket">Título</string>
    <string name="descripcion_ticket">Descripción</string>
    <string name="btn_candelar">Cancelar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="new_ticket">Nuevo Ticket</string>
    <string name="toast_cancelar_new_ticket">Ticket cancelado</string>
    <string name="toast_guardar_new_ticket">Ticket guardado</string>
    <string name="incorrect_credentials">Usuario o contraseña incorrectos.</string>
    <string name="cat_ticket">Categoría:</string>
    <string name="unable_save_ticker">Se ha producido un error. Ticket no guardado.</string>
    <string name="all_mandaory">Todos los campos son obligatorios.</string>
    <string name="tv_detalle_ticket">Detalle del ticket:</string>
    <string name="tv_detalle_cliente">Detalle del cliente:</string>
    <string name="tv_detalle_usuario">Detalle del usuario:</string>
    <string name="toast_cancelar_detalle_ticket">No se ha guardado ninguna modificación.</string>
    <string name="toast_guardar_detalle_ticket">Guardando estado y comentarios del ticket.</string>
    <string name="mn_cerrar_sesion">Cerrar sesión</string>
    <string name="mn_salir_app">Salir</string>
    <string name="tv_titulo_categorias">Categorías</string>
    <string name="create_resetPass">¿Has olvidado tu contraseña?</string>
    <string name="tv_titulo_listaTickets">Lista de Tickets</string>
    <string name="tv_titulo_nuevoTicket">Nuevo ticket</string>
    <string name="toast_unable_fetch_data_detalle">No se ha podido recuperar toda la información de la base de datos.</string>
    <string name="tv_ticket_list_filtro">Filtrar por estado:</string>
    <string name="ticket_update_fail">Error. Inténtelo más tarde.</string>
    <string name="tv_titulo_detalle">Detalle</string>
    <string name="ticket_status_update">Estimado/a %1$s,\n\nQueremos informarle que el estado del ticket con ID: %2$d ha sido actualizado.\nEl nuevo estado del ticket es: %3$s.\n\nPor favor, no dude en contactarnos si necesita más información o asistencia.</string>
    <string name="ticket_status_update_subject">"Notificación: Cambio de estado en el ticket con ID: %1$d"</string>
    <string name="verification_body">¡Hola!\nSu código de verificación es: %s</string>
    <string name="incorrect_rec_code">Código incorrecto.</string>
    <string name="correct_rec_code">Código correcto.</string>
    <string name="no_password_conf">Por favor confirme su contraseña.</string>
    <string name="password_changed_email_subject">¡Su contraseña ha cambiado!</string>
    <string name="password_changed_email_body">Estimado usuario,\n\nLa contraseña de acceso a su cuenta ResolverRocket ha sido modificada.\nPor favor, si usted no he reaalizado este cambio póngase en contacto con nosotros inmediatemente.</string>
    <string name="password_changed_success">Contraseña cambiada satisfactoriamente.</string>
    <string name="password_changed_fail">Se ha producido un error.</string>
    <string name="signature">\n\n--\nSaludos cordiales,\nEquipo de Soporte\nResolver Rocket\nCorreo:
        resolverocket2024@gmail.com\nTeléfono: +34 123 456 789\nSitio web: www.resolverocket.com</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="recordaste_contraseña">¿Recordaste tu contraseña?</string>
    <string name="btn_enviar">Enviar</string>
    <string name="recuperar_contrasenia">Recuperar contraseña</string>
    <string name="te_enviaremos_mail">Te enviaremos un correo electrónico para restablecer tu contraseña.</string>
    <string name="codigo_recuperacion">Código de recuperación</string>
    <string name="introduce_codigo">Por favor, introduzca el código de recuperación enviado a su correo electrónico.</string>
    <string name="no_recibiste_codigo">¿No ha recibido el código?</string>
    <string name="pulsa_aqui">Pulse aquí.</string>
    <string name="cambiar_contrasenia">Cambiar contraseña</string>
    <string name="introduce_contraseña">Ingrese y verifique su nueva contraseña.</string>

    <string name="contenido_contrasenia">Su contraseña debe contener al menos:</string>
    <string name="password_length">8 caracteres.</string>
    <string name="password_uppercase">1 letra mayúscula.</string>
    <string name="password_lowercase">1 letra minúscula.</string>
    <string name="password_digit">1 número.</string>
    <string name="password_special_char">1 carácter especial (.@#$%^&amp;+=¡!?+¿?).</string>
    <string name="invalid_password">La contraseña no cumple con todos los requisitos.</string>
    <string name="tv_datos_usuario">Datos del usuario</string>
    <string name="btn_cambiar_contr">Cambiar contraseña</string>
    <string name="tv_titulo_datos_usuario">Datos del usuario</string>
    <string name="mn_datos_usuario">Datos del usuario</string>

    <string name="new_ticket_notification">Información del Ticket:\n
    ID del Ticket: %1$d\n
    Categoría: %2$d\n
    ID del Cliente: %3$d\n
    Abierto por: %4$s\n
    Título: %5$s\n
    Descripción: %6$s\n
    Estado: %7$s\n
    Abierto: %8$s\n\n
    --------------\n\n
    Información del Usuario:\n
    Correo electrónico: %9$s\n
    Nombre: %10$s\n
    Apellido: %11$s\n
    Teléfono: %12$s\n
    Tipo: %13$s\n\n
    --------------\n\n
    Información del Cliente:\n
    ID del Cliente: %14$d\n
    Nombre: %15$s\n
    NIF: %16$s\n
    Calle: %17$s\n
    Código Postal: %18$s\n
    Provincia: %19$s\n
    Municipio: %20$s\n

    </string>

    <string name="tv_nombre_usuario">"Nombre: "</string>
    <string name="tv_apellidos_usuario">"Apellidos: "</string>
    <string name="tv_telefono_usuario">"Teléfono: "</string>
    <string name="tv_tipo_usuario">"Tipo: "</string>
    <string name="tv_idempresa_usuario">"ID Empresa: "</string>
    <string name="tv_empresa_usuario">"Empresa: "</string>
    <string name="tv_calle_usuario">"Calle: "</string>
    <string name="tv_provincia_usuario">"Provincia: "</string>
    <string name="tv_municipio_usuario">"Municipio: "</string>
    <string name="tv_cp_usuario">"CP: "</string>
    <string name="btn_espaniol">Español</string>
    <string name="btn_ingles">Inglés</string>
    <string name="btn_ruso">Ruso</string>


    <string name="registrarse">Registrarse</string>
    <string name="introduce_el_correo">Introduce el correo electrónico.</string>
    <string name="introduce_la_contrasenia">Introduce la contraseña.</string>
    <string name="email_o_contrasenia_incorrectos">Email o contraseña incorrectos.</string>
    <string name="subject_new_ticket">Nuevo Ticket - #</string>
    <string name="gestionando_permisos">Se están gestionando los permisos para su usuario. En un plazo de 24h tendrá acceso a la aplicación.</string>
    <string name="cerrado">Cerrado</string>
    <string name="confirmar_cierre_ticket">Confirmar cierre de ticket.</string>
    <string name="desea_cambiar_el_estado">¿Desea cambiar el estado a Cerrado? Una vez modificado, el ticket dejará de estar disponible.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nuevo">Nuevo</string>
    <string name="en_proceso">En proceso</string>
    <string name="fecha_ini">FECHA INI: </string>
    <string name="fecha_fin">FECHA FIN: </string>
    <string name="hora_ini">"HORA INI: "</string>
    <string name="hora_fin">"HORA FIN: "</string>
    <string name="titulo">"TÍTULO: "</string>
    <string name="descripcion">"DESCRIPCIÓN: "</string>
    <string name="cliente">"CLIENTE: "</string>
    <string name="calle">"CALLE: "</string>
    <string name="cp">"CP: "</string>
    <string name="municipio">"MUNICIPIO: "</string>
    <string name="provincia">"PROVINCIA: "</string>
    <string name="nombre">"NOMBRE: "</string>
    <string name="apellidos">"APELLIDOS: "</string>
    <string name="telf">"TELF: "</string>
    <string name="email_detalle">"EMAIL: "</string>
    <string name="confirmar_salida">Confirmar salida</string>
    <string name="seguro_quieres_salir">¿Estás seguro de que quieres salir de la aplicación?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="seguro_cerrar_sesion">¿Estás seguro de que quieres cerrar la sesión?</string>
    <string name="subject_codigo_rec">Código de recuperación ResolverRocket</string>
    <string name="todos">Todos</string>
    <string name="working_on_it">!Estamos trabajando en ello!</string>

</resources>
