<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    android:padding="50dp"
    android:gravity="center"
    tools:context=".SetNewPasswordActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_contrasenia"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:id="@+id/tv_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce_contraseña"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPassword"
            android:hint="Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/text_size"
            app:hintEnabled="true"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:layout_marginTop="-20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPasswordConf"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/text_size"
            app:hintEnabled="true"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvContenidoPasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contenido_contrasenia"/>

    <TextView
        android:id="@+id/tvPasswordLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_length"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tvPasswordUppercase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_uppercase"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tvPasswordLowercase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_lowercase"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tvPasswordDigit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_digit"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tvPasswordSpecialChar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_special_char"
        android:textColor="@color/red"
        android:layout_marginBottom="@dimen/margin"/>

    <Button
        android:id="@+id/btnSetNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/cambiar_contrasenia"/>
</LinearLayout>
