<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:orientation="vertical"
    android:background="@drawable/wave"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/iconlogo"/>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperar_contrasenia"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="@dimen/margin"
            android:id="@+id/tv_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/te_enviaremos_mail"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/etRecuperarPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:textSize="@dimen/text_size"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btnRecuperarPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/btn_enviar"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/recordaste_contraseña"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:textSize="@dimen/text_size_hint" />

            <TextView
                android:id="@+id/tvIniciarSesionRecuperarPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/iniciar_sesion"
                android:textSize="@dimen/text_size_hint"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>