<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="70dp"
        app:startIconDrawable="@drawable/ic_person">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/et_text"
        app:hintEnabled="true"
        android:textSize="16sp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="60dp"
        android:text="admin@admin.com" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:startIconDrawable="@drawable/ic_lock_black_24dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="16sp"
            android:background="@drawable/et_text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="admin123"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvRestPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_resetPass"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutPassword"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutPassword"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".7"
        android:text="@string/btn_login"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>